--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,8 +1,18 @@
 body,
 button,
 a {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Fira Sans', 'Droid Sans',
-    'Helvetica Neue', sans-serif;
+  font-family:
+    -apple-system,
+    BlinkMacSystemFont,
+    Segoe UI,
+    Roboto,
+    Oxygen,
+    Ubuntu,
+    Cantarell,
+    Fira Sans,
+    Droid Sans,
+    Helvetica Neue,
+    sans-serif;
 }
 
 html {
@@ -18,17 +28,17 @@ main {
   position: absolute;
   width: 1px;
   height: 1px;
-  margin: -1px;
-  border: 0;
   padding: 0;
-  clip: rect(0 0 0 0);
+  margin: -1px;
   overflow: hidden;
+  clip: rect(0 0 0 0);
+  border: 0;
 }
 
 .container {
   max-width: 800px;
-  margin: 0 auto;
   padding: 0 15px;
+  margin: 0 auto;
 }
 
 .hero {
@@ -44,32 +54,34 @@ main {
 }
 
 .gallery {
-  transform-origin: center;
-  transform: rotate(0deg);
-  transform-style: preserve-3d;
-  animation: flip-animation 12s linear infinite, fade-in 1s ease-in-out forwards;
   opacity: 0;
+  transform: rotate(0deg);
+  transform-origin: center;
+  animation: flip-animation 12s linear infinite, fade-in 1s ease-in-out forwards;
+  transform-style: preserve-3d;
 }
 
 @keyframes flip-animation {
   0% {
     transform: rotateY(0deg);
   }
+
   100% {
     transform: rotateY(720deg);
   }
 }
 
 .gallery__image {
-  border-radius: 25px;
   overflow: hidden;
-  box-shadow: 0px 4px 35px rgba(0, 0, 0, 0.1);
+  border-radius: 25px;
+  box-shadow: 0 4px 35px rgba(0, 0, 0, .1);
 }
 
 @keyframes fade-in {
   0% {
     opacity: 0;
   }
+
   100% {
     opacity: 1;
   }
