--- a/src/components/Advantages/Advantages.module.css
+++ b/src/components/Advantages/Advantages.module.css
@@ -1,16 +1,12 @@
-.advantages {
-  display: block;
-  margin: 0 auto;
-}
-
-.block {
+.blocks {
   display: flex;
+  align-items: center;
   justify-content: center;
   margin-bottom: 60px;
   text-align: center;
 }
 
-.block2 {
+.blocks_item {
   display: block;
   margin-left: 60px;
 }
