--- a/src/components/Advantages/Advantages.module.css
+++ b/src/components/Advantages/Advantages.module.css
@@ -3,6 +3,21 @@
   gap: 60px;
   align-items: center;
   justify-content: center;
-  margin-bottom: 60px;
   text-align: center;
+}
+
+@media (max-width: 1024px) {
+  .blocks {
+    flex-wrap: wrap;
+  }
+}
+
+@media (max-width: 768px) {
+  .blocks {
+    flex-direction: column;
+  }
+}
+
+.block {
+  max-width: 300px;
 }
