--- a/src/components/Slider/Slider.module.css
+++ b/src/components/Slider/Slider.module.css
@@ -17,3 +17,8 @@
   height: 100%;
   object-fit: cover;
 }
+
+/* stylelint-disable selector-pseudo-class-no-unknown */
+.slider :global(.swiper-slide) {
+  text-align: center;
+}
