--- a/src/components/Slider/Slider.module.css
+++ b/src/components/Slider/Slider.module.css
@@ -17,3 +17,13 @@
   height: 100%;
   object-fit: cover;
 }
+
+.team {
+  position: relative;
+  height: 100%;
+}
+
+.team_blocks {
+  margin-right: 50px;
+}
+
