--- a/src/components/Slider/Slider.module.css
+++ b/src/components/Slider/Slider.module.css
@@ -11,7 +11,7 @@
   background: #ffffff;
 }
 
-.swiper-slide img {
+.swiper-slide .photo {
   display: block;
   width: 100%;
   height: 100%;
@@ -21,4 +21,50 @@
 /* stylelint-disable selector-pseudo-class-no-unknown */
 .slider :global(.swiper-slide) {
   text-align: center;
+}
+
+.slider_wrapper {
+  display: block;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+
+.button_prev,
+.button_next {
+  width: 53px;
+  height: 53px;
+  margin: 20px;
+  color: #353432;
+  border-radius: 50%;
+}
+
+.button_prev,
+.button_next :active {
+  color: #ae7f51;
+}
+
+.first_block {
+  font-size: 24px;
+  font-weight: 700;
+  line-height: 33px;
+  color: #000000;
+}
+
+.second_block {
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 22px;
+  color: #353432;
+}
+
+.socials {
+  margin: 10px;
+}
+
+.button {
+  padding: 5px;
+  margin: 5px;
+  color: #efe6dd;
+  background: #353432;
 }
