--- a/src/components/Cards/Cards.module.css
+++ b/src/components/Cards/Cards.module.css
@@ -1,31 +1,20 @@
 .cardsBlock {
-  display: inline-block;
+  display: block;
 }
 
-.cardsBlock {
+.cardColumn {
   box-sizing: border-box;
-  display: inline-block;
+  width: 50%;
+  padding: 4%;
+}
+
+.card {
+  position: relative;
+  display: block;
   align-items: center;
-  justify-content: center;
-  margin: 63px 25px 20px 23px;
   text-align: center;
 }
 
-.cardColumn2 {
-  padding-top: 50px;
+.column1 {
+  padding-top: 100px;
 }
-
-/* .cardColumn1{
-  display: inline-block;
-  padding-top: 50px;
-}
-.cardColumn2{
-  display: inline-block;
-  margin-bottom: 50px;
-}
-.cardColumn3{
-  display: inline-block;
-}
-.cardColumn4{
-  display: inline-block;
-} */
