--- a/src/components/Cards/Cards.module.css
+++ b/src/components/Cards/Cards.module.css
@@ -1,20 +1,16 @@
 .cardsBlock {
-  display: block;
+  display: flex;
+  margin-top: 100px;
 }
 
 .cardColumn {
   box-sizing: border-box;
   width: 50%;
-  padding: 4%;
+  padding-top: 60px;
 }
 
 .card {
   position: relative;
-  display: block;
   align-items: center;
   text-align: center;
-}
-
-.column1 {
-  padding-top: 100px;
 }
