--- a/src/components/Cards/Cards.module.css
+++ b/src/components/Cards/Cards.module.css
@@ -42,3 +42,9 @@
   background: rgba(53, 52, 50, .6);
   border-radius: 0 0 15px 15px;
 }
+
+@media screen and (max-width: 920px) {
+  .cardColumn {
+    flex-wrap: wrap;
+  }
+}
