--- a/src/components/Cards/Cards.module.css
+++ b/src/components/Cards/Cards.module.css
@@ -1,4 +1,4 @@
-.cardsBlock {
+.block {
   display: block;
   align-items: center;
   justify-content: center;
@@ -6,7 +6,7 @@
   margin-top: 100px;
 }
 
-.cardsBlock h2 {
+.block h2 {
   display: block;
   align-items: center;
   justify-content: center;
@@ -14,13 +14,12 @@
   text-align: center;
 }
 
-.cardColumn {
+.columns {
   display: flex;
   align-items: center;
   justify-content: center;
   width: 100%;
-  padding-top: 60px;
-  padding-bottom: 10px;
+  padding: 60px 0 10px;
   text-align: center;
 }
 
@@ -44,7 +43,7 @@
 }
 
 @media screen and (max-width: 920px) {
-  .cardColumn {
+  .columns {
     flex-wrap: wrap;
   }
 }
