--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -26,12 +26,16 @@ main {
   margin: 0 0 150px;
 }
 
-.heading1 {
-  font-size: 3.2rem;
+.h1 {
+  font-size: 2rem;
 }
 
-.heading2 {
-  font-size: 2.4rem;
+.h2 {
+  font-size: 1.5rem;
+}
+
+.h3 {
+  font-size: 1rem;
 }
 
 .paragraph2 {
