--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -26,15 +26,23 @@ main {
   margin: 0 0 150px;
 }
 
-.heading1 {
-  font-size: 3.2rem;
+.h1 {
+  font-size: 2rem;
 }
 
-.heading2 {
-  font-size: 2.4rem;
+.h2 {
+  font-size: 1.5rem;
 }
 
-.paragraph2 {
+.h3 {
+  font-size: 1rem;
+}
+
+.h4 {
+  font-size: .8rem;
+}
+
+.p {
   font-size: 1.4rem;
 }
 
