--- a/src/components/Reviews/Reviews.module.css
+++ b/src/components/Reviews/Reviews.module.css
@@ -1,7 +1,45 @@
-.slider {
-  display: block;
+.h2 {
+  margin-bottom: 40px;
+  font-size: 24px;
+  font-weight: 700;
+  line-height: 33px;
 }
 
 .image {
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+}
+
+.buttons {
+  display: flex;
+  justify-content: center;
+}
+
+.prev,
+.next {
+  display: inline-flex;
+  width: fit-content;
+  padding: 10px;
+  margin: 20px;
+  cursor: pointer;
+  background: #ffffff;
+  border: 2px solid #353432;
+  border-radius: 50%;
+}
+
+.prev img,
+.next img {
   display: block;
+}
+
+.prev:hover,
+.next:hover,
+.prev:focus,
+.next:focus {
+  border-color: #ae7f51;
+}
+
+.prev img {
+  transform: rotate(180deg);
 }
