--- a/src/components/Reviews/Reviews.module.css
+++ b/src/components/Reviews/Reviews.module.css
@@ -5,8 +5,13 @@
   line-height: 33px;
 }
 
+.review {
+  width: 100%;
+  height: 200px;
+}
+
 .image {
-  object-fit: cover;
+  object-fit: contain;
   width: 100%;
   height: 100%;
 }
