--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,4 +1,4 @@
-.header {
+/* .header {
   display: flex;
   gap: 40px;
   align-items: baseline;
@@ -34,4 +34,28 @@
 .link:hover::before {
   transform: scaleX(1);
   transform-origin: left;
+} */
+
+/* .header {
 }
+
+.blocks {
+}
+.logo {
+}
+
+.contacts {
+}
+.address {
+}
+.phone {
+}
+
+.menu {
+}
+
+.buttons {
+}
+
+.button {
+} */
