--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -17,6 +17,10 @@ a {
   line-height: 1.2;
 }
 
+li {
+  list-style-type: none;
+}
+
 html {
   box-sizing: border-box;
   font-size: 62.5%;
@@ -27,14 +31,22 @@ main {
 }
 
 .h1 {
-  font-size: 3.2rem;
+  font-size: 2rem;
 }
 
 .h2 {
-  font-size: 2.4rem;
+  font-size: 1.5rem;
 }
 
-.paragraph2 {
+.h3 {
+  font-size: 1rem;
+}
+
+.h4 {
+  font-size: .8rem;
+}
+
+.p {
   font-size: 1.4rem;
 }
 
