--- a/src/components/Cards/Cards.module.css
+++ b/src/components/Cards/Cards.module.css
@@ -3,16 +3,30 @@
   flex-wrap: wrap;
   gap: 20px;
   justify-content: center;
+  padding-bottom: 60px;
   margin: 0 auto;
   color: #ffffff;
-  text-align: center;
+}
+
+@media (max-width: 1024px) {
+  .cards {
+    padding-bottom: 0;
+  }
 }
 
 .card {
   position: relative;
-  align-items: center;
-  justify-content: center;
-  text-align: center;
+  overflow: hidden;
+}
+
+.card:nth-child(even) {
+  top: 60px;
+}
+
+@media (max-width: 1024px) {
+  .card:nth-child(even) {
+    top: 0;
+  }
 }
 
 .h2 {
@@ -24,21 +38,17 @@
 }
 
 .h3 {
-  position: absolute;
-  top: 77%;
-  left: 8%;
-  align-items: center;
+  padding: 10px 20px;
   margin: 0;
-  font-weight: 400;
-  line-height: 22px;
-  text-align: center;
 }
 
-.background {
+.inner {
   position: absolute;
-  top: 72%;
-  width: 210px;
-  height: 76px;
+
+  /* TODO: Why 4px? Please fix */
+  bottom: 4px;
+  width: 100%;
+  height: 84px;
   background: rgba(53, 52, 50, .6);
   border-radius: 0 0 15px 15px;
 }
