--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,41 +1,3 @@
-/* .header {
-  display: flex;
-  gap: 40px;
-  align-items: baseline;
-  justify-content: center;
-  margin: 50px 0;
-}
-
-.link {
-  position: relative;
-  font-size: 4rem;
-  color: #18272f;
-  text-decoration: none;
-}
-
-.link:nth-child(2) {
-  font-size: 6rem;
-}
-
-.link::before {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  height: 4px;
-  content: '';
-  background-color: #18272f;
-  border-radius: 4px;
-  transition: transform .3s ease-in-out;
-  transform: scaleX(0);
-  transform-origin: right;
-}
-
-.link:hover::before {
-  transform: scaleX(1);
-  transform-origin: left;
-} */
-
 .header {
   width: 100%;
 }
@@ -87,16 +49,34 @@
 }
 
 .link {
-  font-size: 16px;
-  font-weight: 400;
-  line-height: 22px;
-  color: #000000;
+  position: relative;
+  padding: 1rem 2rem;
+  overflow: hidden;
+  font-size: 2.4rem;
+  line-height: 1.2;
+  color: #18272f;
+  text-decoration: none;
+  border: 1px solid #353432;
+  border-radius: 25px;
 }
 
-.link:hover {
-  padding: 4px 11px;
-  border: 1px solid #353432;
-  border-radius: 15px;
+.link::before {
+  position: absolute;
+  bottom: 4px;
+  left: 15%;
+  width: 70%;
+  height: 2px;
+  content: '';
+  background: #18272f;
+  border-radius: 25px;
+  transition: transform .3s ease-in-out;
+  transform: scaleX(0);
+  transform-origin: right;
+}
+
+.link:hover::before {
+  transform: scaleX(1);
+  transform-origin: left;
 }
 
 @media screen and (max-width: 530px) {
