--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -30,6 +30,11 @@
   padding: 0 0 0 10px;
 }
 
+.phone a {
+  color: #18272f;
+  text-decoration: none;
+}
+
 .text {
   display: block;
 }
@@ -62,7 +67,7 @@
 
 .link::before {
   position: absolute;
-  bottom: 4px;
+  bottom: 5px;
   left: 15%;
   width: 70%;
   height: 2px;
@@ -75,6 +80,11 @@
 }
 
 .link:hover::before {
+  transform: scaleX(1);
+  transform-origin: left;
+}
+
+.active .link::before {
   transform: scaleX(1);
   transform-origin: left;
 }
