--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -1,39 +1,6 @@
-/* .footer {
-  display: flex;
-  gap: 40px;
-  align-items: baseline;
-  justify-content: center;
+.wrapper {
+  margin-bottom: 0;
 }
-
-.link {
-  position: relative;
-  font-size: 4rem;
-  color: #18272f;
-  text-decoration: none;
-}
-
-.link:nth-child(2) {
-  font-size: 6rem;
-}
-
-.link::before {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  height: 4px;
-  content: '';
-  background-color: #18272f;
-  border-radius: 4px;
-  transition: transform .3s ease-in-out;
-  transform: scaleX(0);
-  transform-origin: right;
-}
-
-.link:hover::before {
-  transform: scaleX(1);
-  transform-origin: left;
-} */
 
 .footer {
   width: 100%;
@@ -49,6 +16,7 @@
 .menu {
   display: flex;
   justify-content: center;
+  height: max-content;
   margin-top: 15px;
   text-align: center;
 }
@@ -63,16 +31,31 @@
 }
 
 .link {
-  font-size: 16px;
+  position: relative;
+  font-size: 1.6rem;
   font-weight: 700;
-  line-height: 22px;
+  line-height: 1.2;
   color: #2a2927;
+  text-decoration: none;
 }
 
-.link:hover {
-  padding: 4px 11px;
-  border: 1px solid #353432;
-  border-radius: 15px;
+.link::before {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 2px;
+  content: '';
+  background-color: #18272f;
+  border-radius: 4px;
+  transition: transform .3s ease-in-out;
+  transform: scaleX(0);
+  transform-origin: right;
+}
+
+.link:hover::before {
+  transform: scaleX(1);
+  transform-origin: left;
 }
 
 .socials {
