--- a/src/components/Advantages/Advantages.module.css
+++ b/src/components/Advantages/Advantages.module.css
@@ -4,6 +4,25 @@
   align-items: center;
   justify-content: center;
   text-align: center;
+  opacity: 0;
+}
+
+.active {
+  opacity: 1;
+  transform: translateX(-50px);
+  animation: fadeInTranslateX .8s ease-in-out forwards;
+}
+
+@keyframes fadeInTranslateX {
+  0% {
+    opacity: 0;
+    transform: translateX(-50px);
+  }
+
+  100% {
+    opacity: 1;
+    transform: translateX(0);
+  }
 }
 
 @media (max-width: 1024px) {
