--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -95,15 +95,42 @@ main {
   transform-style: preserve-3d;
 }
 
-.invisibleChild {
+.invisible-child {
   opacity: 0;
-  transition: all ease-in .5s;
-  transform: translateX(-20%);
+  transition: transform ease-in .5s, opacity ease-in .8s;
+  transform: translateY(40%);
 }
 
-.slideIn {
+.invisible-child:nth-child(1) {
+  transition-delay: 100ms;
+}
+
+.invisible-child:nth-child(2) {
+  transition-delay: 300ms;
+}
+
+.invisible-child:nth-child(3) {
+  transition-delay: 500ms;
+}
+
+.invisible-child:nth-child(4) {
+  transition-delay: 700ms;
+}
+
+.invisible-child:nth-child(5) {
+  transition-delay: 900ms;
+}
+
+.invisible-child:nth-child(6) {
+  transition-delay: 1100ms;
+}
+
+.slide-in {
+  transform: translateY(0);
+}
+
+.fade-in {
   opacity: 1;
-  transform: translateX(0);
 }
 
 @keyframes flip-animation {
