--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -1,5 +1,21 @@
-.heroContainer {
+.hero-wrapper {
+  margin-bottom: 100px;
+}
+
+@media screen and (max-width: 768px) {
+  .hero-wrapper {
+    margin-bottom: 50px;
+  }
+}
+
+.hero {
   position: relative;
+}
+
+@media screen and (max-width: 768px) {
+  .hero {
+    height: 400px;
+  }
 }
 
 .text {
@@ -7,11 +23,18 @@
   top: 50%;
   left: 50%;
   z-index: 1;
-  padding: 12px 29px;
+  padding: 16px 32px;
   text-align: center;
   background: rgba(53, 52, 50, .6);
   border-radius: 15px;
   transform: translate(-50%, -50%);
+}
+
+@media screen and (max-width: 768px) {
+  .text {
+    width: 80%;
+    padding: 8px 16px;
+  }
 }
 
 .image {
@@ -23,6 +46,5 @@
 }
 
 .description {
-  font-weight: 400;
   color: #ffffff;
 }
