--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -28,11 +28,18 @@
 .address p,
 .phone p {
   padding: 0 0 0 10px;
+  margin: 0;
 }
 
 .phone a {
   color: #18272f;
   text-decoration: none;
+}
+
+@media screen and (max-width: 768px) {
+  .address p {
+    margin-bottom: 10px;
+  }
 }
 
 .text {
