--- a/src/components/PostsCarousel/PostsCarousel.module.css
+++ b/src/components/PostsCarousel/PostsCarousel.module.css
@@ -4,12 +4,12 @@
 }
 
 .slider-wrapper {
-  margin-bottom: 80px;
+  margin: 80px auto;
 }
 
 @media screen and (max-width: 1024px) {
   .slider-wrapper {
-    margin-bottom: 40px;
+    margin: 40px auto;
   }
 }
 
@@ -82,17 +82,15 @@
 .prev,
 .next {
   position: absolute;
-  top: 200px;
+  top: 180px;
   z-index: 2;
   display: inline-flex;
   width: fit-content;
   padding: 10px;
-  margin: 20px;
   cursor: pointer;
   background: #ffffff;
   border: 2px solid #353432;
   border-radius: 50%;
-  transform: translateY(-50%);
 }
 
 .prev {
@@ -107,7 +105,7 @@
   .next,
   .prev {
     position: static;
-    transform: translateY(0);
+    margin: 20px;
   }
 }
 
