--- a/src/components/Contacts/Contacts.module.css
+++ b/src/components/Contacts/Contacts.module.css
@@ -24,9 +24,6 @@
 
 .image {
   display: block;
-  align-items: center;
-  justify-content: center;
-  text-align: center;
 }
 
 @media screen and (max-width: 800px) {
@@ -40,15 +37,9 @@
     text-align: center;
   }
 
-  .block1 {
-    display: flex;
-    gap: 50px;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-  }
-
-  .address {
-    max-width: 250px;
+  .image img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
   }
 }
